commit on 30 April of work in progress

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,7 +9,7 @@
 @import 'variables';
 
 // Bulma
-@import '~bulma/bulma.sass';
+@import '~buefy/src/scss/buefy-build.scss';
 
 html {
   background-color: black;
