--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,6 +2,11 @@
 
 $ctc-red: #d10f22;
 
+//font variables
+$roboto-slab: 'Quicksand', sans-serif;
+
+$family-sans-serif: $roboto-slab;
+
 //derived variables
 
 $primary: $ctc-red;
