imported Josefin Sans font

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -4,8 +4,9 @@ $ctc-red: #d10f22;
 
 //font variables
 $roboto-slab: 'Quicksand', sans-serif;
+$josefin-sans: 'Josefin Sans', sans-serif;
 
-$family-sans-serif: $roboto-slab;
+$family-sans-serif: $josefin-sans;
 
 //derived variables
 
