--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Quicksand&display=swap);@import url(https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Quicksand&display=swap);@import url(https://fonts.googleapis.com/css?family=Josefin+Sans:300&display=swap);@charset "UTF-8";
 
 .fa,
 .fas,
