changed base font size

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -7,6 +7,7 @@ $roboto-slab: 'Quicksand', sans-serif;
 $josefin-sans: 'Josefin Sans', sans-serif;
 
 $family-sans-serif: $josefin-sans;
+$body-size: 18px;
 
 //derived variables
 
